--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
                     <span class="project-badge">PARQUE VEGA</span>
                     <span class="project-badge">LA CAMOCHA-VEGA</span>
                     <span class="project-badge">52 ADOSADOS</span>
-                    <span class="project-badge">DEADLINE: 29 OCT</span>
                 </div>
             </div>
             
@@ -471,7 +470,7 @@
                     </div>
                     
                     <div class="warning-box">
-                        NOTA IMPORTANTE: Este alert tiene prioridad absoluta sobre cualquier etapa del flujo automation y deriva inmediatamente al equipo comercial Parque Vega para contacto manual urgente. Promoción exclusiva con solo 52 unidades. Deadline: 29 de octubre.
+                        NOTA IMPORTANTE: Este alert tiene prioridad absoluta sobre cualquier etapa del flujo automation y deriva inmediatamente al equipo comercial Parque Vega para contacto manual urgente. Promoción exclusiva con solo 52 unidades.
                     </div>
                 </div>
             </div>
