--- a/index.html
+++ b/index.html
@@ -116,12 +116,20 @@
                                 <div class="timing-badge">Inmediato</div>
                                 <div class="node-title">Email Idealista</div>
                                 <div class="node-desc">Enlace a Home Landing</div>
+                                <div class="templates" style="background: #fecaca;">
+                                    <strong>Email Template:</strong><br>
+                                    <a href="https://drive.google.com/file/d/1IfLc7AX8_Wn-xXCtCnemmJ6b3pFh1FDH/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">📧 Ver Plantilla</a>
+                                </div>
                             </div>
                             <div style="font-size: 1.2rem;">↓</div>
                             <div class="node node-whatsapp" style="width: 100%; max-width: 280px;">
                                 <div class="timing-badge">Inmediato</div>
                                 <div class="node-title">WhatsApp Idealista</div>
                                 <div class="node-desc">Seguimiento inmediato</div>
+                                <div class="templates" style="background: #dcfce7;">
+                                    <strong>WhatsApp Template:</strong><br>
+                                    <span style="color: #64748b; font-style: italic;">💬 Próximamente</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -177,7 +185,7 @@
                                     <div class="node-desc">Tu hogar familiar en zona premium</div>
                                     <div class="templates" style="background: #fecaca;">
                                         <strong>Email Template:</strong><br>
-                                        Email Rescate - Familia en Crecimiento
+                                        <a href="https://drive.google.com/file/d/14DM0Wf5cJPmThIBb4DhfD57rvB-99oB1/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">Email Pulse - Familia en Crecimiento</a>
                                     </div>
                                 </div>
                             </div>
@@ -190,7 +198,7 @@
                                     <div class="node-desc">Tu oasis de tranquilidad y confort</div>
                                     <div class="templates" style="background: #fecaca;">
                                         <strong>Email Template:</strong><br>
-                                        Email Rescate - Pareja Consolidada
+                                        <a href="https://drive.google.com/file/d/1b1r9WiXGmrgIAzoV4xLXcNGEWdIdu5UN/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">Email Pulse - Pareja Consolidada</a>
                                     </div>
                                 </div>
                             </div>
@@ -208,7 +216,7 @@
                                     <div class="node-desc">El hogar que tu familia merece</div>
                                     <div class="templates" style="background: #dcfce7;">
                                         <strong>WhatsApp Template:</strong><br>
-                                        💬 WhatsApp - Familia en Crecimiento
+                                        <span style="color: #64748b; font-style: italic;">💬 WhatsApp Pulse - Familia en Crecimiento (Próximamente)</span>
                                     </div>
                                 </div>
                             </div>
@@ -221,7 +229,7 @@
                                     <div class="node-desc">El estilo de vida que mereces</div>
                                     <div class="templates" style="background: #dcfce7;">
                                         <strong>WhatsApp Template:</strong><br>
-                                        💬 WhatsApp - Pareja Consolidada
+                                        <span style="color: #64748b; font-style: italic;">💬 WhatsApp Pulse - Pareja Consolidada (Próximamente)</span>
                                     </div>
                                 </div>
                             </div>
@@ -239,7 +247,7 @@
                                     <div class="node-desc">Última oportunidad hogar familiar</div>
                                     <div class="templates" style="background: #dcfce7;">
                                         <strong>WhatsApp Template:</strong><br>
-                                        💬 WhatsApp Final - Familia Crecimiento
+                                        <span style="color: #64748b; font-style: italic;">💬 WhatsApp Pulse 2 - Familia Crecimiento (Próximamente)</span>
                                     </div>
                                 </div>
                             </div>
@@ -252,7 +260,7 @@
                                     <div class="node-desc">Tu espacio de bienestar te espera</div>
                                     <div class="templates" style="background: #dcfce7;">
                                         <strong>WhatsApp Template:</strong><br>
-                                        💬 WhatsApp Final - Pareja Consolidada
+                                        <span style="color: #64748b; font-style: italic;">💬 WhatsApp Pulse 2 - Pareja Consolidada (Próximamente)</span>
                                     </div>
                                 </div>
                             </div>
@@ -308,7 +316,7 @@
                                         <div class="node-desc">Asegura tu hogar familiar</div>
                                         <div class="templates" style="background: #fecaca;">
                                             <strong>Email Template:</strong><br>
-                                            Email Rescate Config - Familia Crecimiento
+                                            <a href="https://drive.google.com/file/d/1qyOvkkfsC959uGjpxE4YkVhHQpqS8pNM/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">Email Select - Familia Crecimiento</a>
                                         </div>
                                     </div>
                                 </div>
@@ -324,7 +332,7 @@
                                         <div class="node-desc">Tu espacio de confort te espera</div>
                                         <div class="templates" style="background: #fecaca;">
                                             <strong>Email Template:</strong><br>
-                                            Email Rescate Config - Pareja Consolidada
+                                            <a href="https://drive.google.com/file/d/1tRBdlCL0Kik1ZOEQaDJGHz1bUE1XY0A0/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">Email Select - Pareja Consolidada</a>
                                         </div>
                                     </div>
                                 </div>
@@ -342,7 +350,7 @@
                                         <div class="node-desc">Completa tu selección</div>
                                         <div class="templates" style="background: #dcfce7;">
                                             <strong>WhatsApp Template:</strong><br>
-                                            💬 WhatsApp Config - Familia Crecimiento
+                                            <span style="color: #64748b; font-style: italic;">💬 WhatsApp Select - Familia Crecimiento (Próximamente)</span>
                                         </div>
                                     </div>
                                 </div>
@@ -355,7 +363,7 @@
                                         <div class="node-desc">Personaliza tu espacio ideal</div>
                                         <div class="templates" style="background: #dcfce7;">
                                             <strong>WhatsApp Template:</strong><br>
-                                            💬 WhatsApp Config - Pareja Consolidada
+                                            <span style="color: #64748b; font-style: italic;">💬 WhatsApp Select - Pareja Consolidada (Próximamente)</span>
                                         </div>
                                     </div>
                                 </div>
@@ -372,7 +380,7 @@
                                         <div class="node-title">WhatsApp Final Config FC</div>
                                         <div class="node-desc">Asegura tu hogar familiar</div>
                                         <div class="templates" style="background: #dcfce7;">
-                                            💬 WhatsApp Final Config - Familia Crecimiento
+                                            💬 WhatsApp Select 2 - Familia Crecimiento
                                         </div>
                                     </div>
                                 </div>
@@ -384,7 +392,7 @@
                                         <div class="node-title">WhatsApp Final Config PC</div>
                                         <div class="node-desc">El bienestar que buscas</div>
                                         <div class="templates" style="background: #dcfce7;">
-                                            💬 WhatsApp Final Config - Pareja Consolidada
+                                            💬 WhatsApp Select 2 - Pareja Consolidada
                                         </div>
                                     </div>
                                 </div>
