--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <div class="node-desc">Seguimiento inmediato</div>
                                 <div class="templates" style="background: #dcfce7;">
                                     <strong>WhatsApp Template:</strong><br>
-                                    <span style="color: #64748b; font-style: italic;">💬 Próximamente</span>
+                                    <a href="https://drive.google.com/file/d/1aOtGxvFRNHu0XCE8XioROhzKvAO-1nrz/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 Ver Plantilla</a>
                                 </div>
                             </div>
                         </div>
@@ -216,7 +216,7 @@
                                     <div class="node-desc">El hogar que tu familia merece</div>
                                     <div class="templates" style="background: #dcfce7;">
                                         <strong>WhatsApp Template:</strong><br>
-                                        <span style="color: #64748b; font-style: italic;">💬 WhatsApp Pulse - Familia en Crecimiento (Próximamente)</span>
+                                        <a href="https://drive.google.com/file/d/1imtsUtj5UEwwiqtLvmLsWsLUYoaKI8Ur/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Pulse - Familia en Crecimiento</a>
                                     </div>
                                 </div>
                             </div>
@@ -229,7 +229,7 @@
                                     <div class="node-desc">El estilo de vida que mereces</div>
                                     <div class="templates" style="background: #dcfce7;">
                                         <strong>WhatsApp Template:</strong><br>
-                                        <span style="color: #64748b; font-style: italic;">💬 WhatsApp Pulse - Pareja Consolidada (Próximamente)</span>
+                                        <a href="https://drive.google.com/file/d/1rtX6FjfBtFsUXql7N9BmdMyP5Z_ByJ6T/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Pulse - Pareja Consolidada</a>
                                     </div>
                                 </div>
                             </div>
@@ -247,7 +247,7 @@
                                     <div class="node-desc">Última oportunidad hogar familiar</div>
                                     <div class="templates" style="background: #dcfce7;">
                                         <strong>WhatsApp Template:</strong><br>
-                                        <span style="color: #64748b; font-style: italic;">💬 WhatsApp Pulse 2 - Familia Crecimiento (Próximamente)</span>
+                                        <a href="https://drive.google.com/file/d/1EhZln-tDbz_NT-bPeQ663x3tZwOo6DFA/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Pulse 2 - Familia Crecimiento</a>
                                     </div>
                                 </div>
                             </div>
@@ -260,7 +260,7 @@
                                     <div class="node-desc">Tu espacio de bienestar te espera</div>
                                     <div class="templates" style="background: #dcfce7;">
                                         <strong>WhatsApp Template:</strong><br>
-                                        <span style="color: #64748b; font-style: italic;">💬 WhatsApp Pulse 2 - Pareja Consolidada (Próximamente)</span>
+                                        <a href="https://drive.google.com/file/d/1h0M1brPa_4IYOYIAoowcCVrP8csWLq5b/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Pulse 2 - Pareja Consolidada</a>
                                     </div>
                                 </div>
                             </div>
@@ -350,7 +350,7 @@
                                         <div class="node-desc">Completa tu selección</div>
                                         <div class="templates" style="background: #dcfce7;">
                                             <strong>WhatsApp Template:</strong><br>
-                                            <span style="color: #64748b; font-style: italic;">💬 WhatsApp Select - Familia Crecimiento (Próximamente)</span>
+                                            <a href="https://drive.google.com/file/d/1g46j4JKwCT7GR_2fltPbUhfVom-PG86Z/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Select - Familia Crecimiento</a>
                                         </div>
                                     </div>
                                 </div>
@@ -363,7 +363,7 @@
                                         <div class="node-desc">Personaliza tu espacio ideal</div>
                                         <div class="templates" style="background: #dcfce7;">
                                             <strong>WhatsApp Template:</strong><br>
-                                            <span style="color: #64748b; font-style: italic;">💬 WhatsApp Select - Pareja Consolidada (Próximamente)</span>
+                                            <a href="https://drive.google.com/file/d/1xD4XdU9MYXcoIXyruGKzZBz8QG7yqM4G/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Select - Pareja Consolidada</a>
                                         </div>
                                     </div>
                                 </div>
@@ -380,7 +380,7 @@
                                         <div class="node-title">WhatsApp Final Config FC</div>
                                         <div class="node-desc">Asegura tu hogar familiar</div>
                                         <div class="templates" style="background: #dcfce7;">
-                                            💬 WhatsApp Select 2 - Familia Crecimiento
+                                            <a href="https://drive.google.com/file/d/1cldEHlYuxAt8qLBWDzjpwQlHlHWNIj39/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Select 2 - Familia Crecimiento</a>
                                         </div>
                                     </div>
                                 </div>
@@ -392,7 +392,7 @@
                                         <div class="node-title">WhatsApp Final Config PC</div>
                                         <div class="node-desc">El bienestar que buscas</div>
                                         <div class="templates" style="background: #dcfce7;">
-                                            💬 WhatsApp Select 2 - Pareja Consolidada
+                                            <a href="https://drive.google.com/file/d/1LykaJAbuyMv3b4zjOvqRDBAKI2uUyMVI/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Select 2 - Pareja Consolidada</a>
                                         </div>
                                     </div>
                                 </div>
