--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 <div class="node-desc">Enlace a Home Landing</div>
                                 <div class="templates" style="background: #fecaca;">
                                     <strong>Email Template:</strong><br>
-                                    <a href="https://drive.google.com/file/d/1IfLc7AX8_Wn-xXCtCnemmJ6b3pFh1FDH/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">📧 Ver Plantilla</a>
+                                    <a href="https://drive.google.com/file/d/1IfLc7AX8_Wn-xXCtCnemmJ6b3pFh1FDH/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">📧 Parque Vega - Idealista</a>
                                 </div>
                             </div>
                             <div style="font-size: 1.2rem;">↓</div>
@@ -128,7 +128,7 @@
                                 <div class="node-desc">Seguimiento inmediato</div>
                                 <div class="templates" style="background: #dcfce7;">
                                     <strong>WhatsApp Template:</strong><br>
-                                    <a href="https://drive.google.com/file/d/1aOtGxvFRNHu0XCE8XioROhzKvAO-1nrz/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 Ver Plantilla</a>
+                                    <a href="https://drive.google.com/file/d/1aOtGxvFRNHu0XCE8XioROhzKvAO-1nrz/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 parquevega_idealista</a>
                                 </div>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                                     <div class="node-desc">Tu hogar familiar en zona premium</div>
                                     <div class="templates" style="background: #fecaca;">
                                         <strong>Email Template:</strong><br>
-                                        <a href="https://drive.google.com/file/d/14DM0Wf5cJPmThIBb4DhfD57rvB-99oB1/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">Email Pulse - Familia en Crecimiento</a>
+                                        <a href="https://drive.google.com/file/d/14DM0Wf5cJPmThIBb4DhfD57rvB-99oB1/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">Parque Vega - Familia - Pulse</a>
                                     </div>
                                 </div>
                             </div>
@@ -198,7 +198,7 @@
                                     <div class="node-desc">Tu oasis de tranquilidad y confort</div>
                                     <div class="templates" style="background: #fecaca;">
                                         <strong>Email Template:</strong><br>
-                                        <a href="https://drive.google.com/file/d/1b1r9WiXGmrgIAzoV4xLXcNGEWdIdu5UN/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">Email Pulse - Pareja Consolidada</a>
+                                        <a href="https://drive.google.com/file/d/1b1r9WiXGmrgIAzoV4xLXcNGEWdIdu5UN/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">Parque Vega - Pareja - Pulse</a>
                                     </div>
                                 </div>
                             </div>
@@ -216,7 +216,7 @@
                                     <div class="node-desc">El hogar que tu familia merece</div>
                                     <div class="templates" style="background: #dcfce7;">
                                         <strong>WhatsApp Template:</strong><br>
-                                        <a href="https://drive.google.com/file/d/1imtsUtj5UEwwiqtLvmLsWsLUYoaKI8Ur/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Pulse - Familia en Crecimiento</a>
+                                        <a href="https://drive.google.com/file/d/1imtsUtj5UEwwiqtLvmLsWsLUYoaKI8Ur/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 parquevega_pulse_1_esp_familia</a>
                                     </div>
                                 </div>
                             </div>
@@ -229,7 +229,7 @@
                                     <div class="node-desc">El estilo de vida que mereces</div>
                                     <div class="templates" style="background: #dcfce7;">
                                         <strong>WhatsApp Template:</strong><br>
-                                        <a href="https://drive.google.com/file/d/1rtX6FjfBtFsUXql7N9BmdMyP5Z_ByJ6T/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Pulse - Pareja Consolidada</a>
+                                        <a href="https://drive.google.com/file/d/1rtX6FjfBtFsUXql7N9BmdMyP5Z_ByJ6T/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 parquevega_pulse_1_esp_pareja</a>
                                     </div>
                                 </div>
                             </div>
@@ -247,7 +247,7 @@
                                     <div class="node-desc">Última oportunidad hogar familiar</div>
                                     <div class="templates" style="background: #dcfce7;">
                                         <strong>WhatsApp Template:</strong><br>
-                                        <a href="https://drive.google.com/file/d/1EhZln-tDbz_NT-bPeQ663x3tZwOo6DFA/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Pulse 2 - Familia Crecimiento</a>
+                                        <a href="https://drive.google.com/file/d/1EhZln-tDbz_NT-bPeQ663x3tZwOo6DFA/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 parquevega_pulse_2_esp_familia</a>
                                     </div>
                                 </div>
                             </div>
@@ -260,7 +260,7 @@
                                     <div class="node-desc">Tu espacio de bienestar te espera</div>
                                     <div class="templates" style="background: #dcfce7;">
                                         <strong>WhatsApp Template:</strong><br>
-                                        <a href="https://drive.google.com/file/d/1h0M1brPa_4IYOYIAoowcCVrP8csWLq5b/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Pulse 2 - Pareja Consolidada</a>
+                                        <a href="https://drive.google.com/file/d/1h0M1brPa_4IYOYIAoowcCVrP8csWLq5b/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 parquevega_pulse_2_esp_pareja</a>
                                     </div>
                                 </div>
                             </div>
@@ -316,7 +316,7 @@
                                         <div class="node-desc">Asegura tu hogar familiar</div>
                                         <div class="templates" style="background: #fecaca;">
                                             <strong>Email Template:</strong><br>
-                                            <a href="https://drive.google.com/file/d/1qyOvkkfsC959uGjpxE4YkVhHQpqS8pNM/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">Email Select - Familia Crecimiento</a>
+                                            <a href="https://drive.google.com/file/d/1qyOvkkfsC959uGjpxE4YkVhHQpqS8pNM/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">Parque Vega - Familia - Select</a>
                                         </div>
                                     </div>
                                 </div>
@@ -332,7 +332,7 @@
                                         <div class="node-desc">Tu espacio de confort te espera</div>
                                         <div class="templates" style="background: #fecaca;">
                                             <strong>Email Template:</strong><br>
-                                            <a href="https://drive.google.com/file/d/1tRBdlCL0Kik1ZOEQaDJGHz1bUE1XY0A0/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">Email Select - Pareja Consolidada</a>
+                                            <a href="https://drive.google.com/file/d/1tRBdlCL0Kik1ZOEQaDJGHz1bUE1XY0A0/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">Parque Vega - Pareja - Select</a>
                                         </div>
                                     </div>
                                 </div>
@@ -350,7 +350,7 @@
                                         <div class="node-desc">Completa tu selección</div>
                                         <div class="templates" style="background: #dcfce7;">
                                             <strong>WhatsApp Template:</strong><br>
-                                            <a href="https://drive.google.com/file/d/1g46j4JKwCT7GR_2fltPbUhfVom-PG86Z/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Select - Familia Crecimiento</a>
+                                            <a href="https://drive.google.com/file/d/1g46j4JKwCT7GR_2fltPbUhfVom-PG86Z/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 parquevega_select_1_esp_familia</a>
                                         </div>
                                     </div>
                                 </div>
@@ -363,7 +363,7 @@
                                         <div class="node-desc">Personaliza tu espacio ideal</div>
                                         <div class="templates" style="background: #dcfce7;">
                                             <strong>WhatsApp Template:</strong><br>
-                                            <a href="https://drive.google.com/file/d/1xD4XdU9MYXcoIXyruGKzZBz8QG7yqM4G/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Select - Pareja Consolidada</a>
+                                            <a href="https://drive.google.com/file/d/1xD4XdU9MYXcoIXyruGKzZBz8QG7yqM4G/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 parquevega_select_1_esp_pareja</a>
                                         </div>
                                     </div>
                                 </div>
@@ -380,7 +380,7 @@
                                         <div class="node-title">WhatsApp Final Config FC</div>
                                         <div class="node-desc">Asegura tu hogar familiar</div>
                                         <div class="templates" style="background: #dcfce7;">
-                                            <a href="https://drive.google.com/file/d/1cldEHlYuxAt8qLBWDzjpwQlHlHWNIj39/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Select 2 - Familia Crecimiento</a>
+                                            <a href="https://drive.google.com/file/d/1cldEHlYuxAt8qLBWDzjpwQlHlHWNIj39/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 parquevega_select_2_esp_familia</a>
                                         </div>
                                     </div>
                                 </div>
@@ -392,7 +392,7 @@
                                         <div class="node-title">WhatsApp Final Config PC</div>
                                         <div class="node-desc">El bienestar que buscas</div>
                                         <div class="templates" style="background: #dcfce7;">
-                                            <a href="https://drive.google.com/file/d/1LykaJAbuyMv3b4zjOvqRDBAKI2uUyMVI/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 WhatsApp Select 2 - Pareja Consolidada</a>
+                                            <a href="https://drive.google.com/file/d/1LykaJAbuyMv3b4zjOvqRDBAKI2uUyMVI/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 parquevega_select_2_esp_pareja</a>
                                         </div>
                                     </div>
                                 </div>
