--- a/index.html
+++ b/index.html
@@ -131,6 +131,19 @@
                                     <a href="https://drive.google.com/file/d/1aOtGxvFRNHu0XCE8XioROhzKvAO-1nrz/view?usp=drive_link" target="_blank" style="color: #059669; text-decoration: underline;">💬 parquevega_idealista</a>
                                 </div>
                             </div>
+                            <div style="font-size: 1.2rem;">↓</div>
+                            <div style="background: #fef2f2; padding: 10px; border-radius: 6px; border: 2px solid #ef4444; width: 100%; max-width: 280px;">
+                                <div style="text-align: center; font-weight: 700; color: #991b1b; font-size: 0.7rem; margin-bottom: 8px;">RESCATE SI NO ACCEDE A PULSE</div>
+                                <div class="node node-whatsapp" style="width: 100%; margin: 0;">
+                                    <div class="timing-badge rescue-badge">+48h</div>
+                                    <div class="node-title">WhatsApp Rescate Idealista</div>
+                                    <div class="node-desc">Completa tu registro</div>
+                                    <div class="templates" style="background: #dcfce7;">
+                                        <strong>WhatsApp Template:</strong><br>
+                                        <a href="https://drive.google.com/file/d/1w9QshbOzhuMPAb2pr6cgB7cKIHiXKPvb/view?usp=sharing" target="_blank" style="color: #059669; text-decoration: underline;">💬 parquevega_idealista_2</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     
